# CCometixLine

./: .gitignore  Cargo.toml  README.md  README.zh.md
examples/: test_full_statusline.rs  test_litellm_fetch.rs
src/: cli.rs  lib.rs  main.rs
src/billing/: block.rs  calculator.rs  mod.rs  pricing.rs  types.rs
src/config/: block_overrides.rs  defaults.rs  loader.rs  mod.rs  types.rs
src/core/: statusline.rs
src/core/segments/: burn_rate.rs  cost.rs  mod.rs  usage.rs
src/ui/: app.rs
src/ui/components/: icon_selector.rs  mod.rs  options_editor.rs  preview.rs  segment_list.rs  settings.rs
src/ui/themes/: presets.rs
src/utils/: data_loader.rs  data_loader_fast.rs  debug.rs  mod.rs  runtime.rs  transcript.rs
