[package]
name = "ccometixline"
version = "1.0.3"
edition = "2021"
description = "CCometixLine (ccline) - High-performance Claude Code StatusLine tool written in Rust"
authors = ["Haleclipse"]
license = "MIT"
repository = "https://github.com/username/CCometixLine"
readme = "README.md"
keywords = ["claude", "statusline", "powerline", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# TUI 依赖
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# 颜色处理
ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

# 可选：更新功能
ureq = { version = "2.10", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "5.0", optional = true }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.20"
glob = "0.3"
sonic-rs = "0.3"

[features]
default = ["tui", "self-update"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui"]
self-update = ["ureq", "semver", "dirs"]
